# kda-attention

./: README.md  pyproject.toml
examples/: recurrent_demo.py  scan_demo.py
kda_attn/: __init__.py  chunk_naive.py  kda.py
tests/: test_chunk_vs_step.py  test_eq1.py
