[project]
name = "kda-attention"
version = "0.0.1"
description = "Research-style PyTorch implementation of Kimi Delta Attention (KDA)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "torch>=2.2",
 "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kda_attn*"]
